Prevent .img-lg figcaptions getting cut off on the left side (small screens)

--- a/css/custom/custom-other.less
+++ b/css/custom/custom-other.less
@@ -332,6 +332,12 @@ figcaption {
 		margin: 10px 0;
 	}
 }
+.figure-lg > figcaption {
+	padding-left: 5%;
+	@media (min-width: 650px) {
+		padding-left: 5px;
+	}
+}
 
 img.pull-left {
 	margin-right: @grid-gutter-width / 2;
